refactor: use List.of in PrReviewService and remove unused imports